# federation-registry

./: .coveragerc  .env.example  .pre-commit-config.yaml  pyproject.toml  requirements.dev.txt
.devcontainer/: docker-compose.yml
docker/: Dockerfile  compose.yaml
fed_reg/: auth.py  config.py  crud.py  crud2.py  db.py  dependencies.py  logger.py  main.py  models.py  pagination.py  query.py  router.py  utils.py
fed_reg/flavor/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/identity_provider/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/image/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/location/: crud.py  schemas.py  schemas_extended.py
fed_reg/network/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/project/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/provider/: constants.py  crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/quota/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/region/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/service/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/sla/: crud.py  schemas.py  schemas_extended.py
fed_reg/storageclass/: __init__.py  crud.py
fed_reg/user_group/: crud.py  models.py  schemas.py  schemas_extended.py
fed_reg/v2/: __init__.py  router.py  schemas.py
jenkins/: docker.Jenkinsfile  linting.Jenkinsfile  tests.Jenkinsfile
kubernetes/: db-deployment.yaml  db-logs-persistentvolumeclaim.yaml  db-service.yaml  fed-mgr-ingress.yaml  fed-reg-cm0-configmap.yaml  fed-reg-deployment.yaml  fed-reg-service.yaml  opa-cm0-configmap.yaml  opa-deployment.yaml  opa-service.yaml
opa/: README.md  example-policy.rego
tests/: conftest.py  create_dict.py  test_auth.py  test_choose_out_schema.py  test_pagination.py  utils.py
tests/api/: conftest.py  test_api_auth_errors.py  test_api_conflict.py  test_api_missing.py  test_api_no_auth.py  test_api_returned_schema.py  test_api_write_operation_commons.py
tests/crud/: conftest.py  test_base.py  test_block_storage_quota.py  test_block_storage_service.py  test_compute_quota.py  test_compute_service.py  test_flavor_crud.py  test_flavor_crud_cases.py  test_identity_provider.py  test_identity_provider_crud.py  test_identity_service.py  test_image_crud.py  test_image_crud_cases.py  test_location.py  test_location_crud.py  test_network_crud.py  test_network_crud_cases.py  test_network_quota.py  test_network_service.py  test_object_store_quota.py  test_object_store_service.py  test_private_flavor.py  test_private_image.py  test_private_network.py  test_project.py  test_project_crud.py  test_provider.py  test_provider_crud.py  test_provider_crud_cases.py  test_quota_crud.py  test_region.py  test_region_crud.py  test_service_crud.py  test_shared_flavor.py  test_shared_image.py  test_shared_network.py  test_sla.py  test_sla_crud.py  test_user_group.py  test_user_group_crud.py
tests/generics/: test_base_schema.py  test_choose_out_schema.py  test_crud.py  test_pagination.py  test_query_schema.py  utils.py
tests/models/: conftest.py  utils.py  (+25 more)
(+100 files in other folders)
