[tool.poetry]
name = "federation-registry"
version = "0.1.0"
description = "Python web application providing public REST API to inspect the configurations of the providers registered into the DataCloud project"
authors = ["Giovanni Savarese <giovanni.savarese@ba.infn.it>", "Marica Antonacci <marica.antonacci@ba.infn.it>"]
packages = [{ include = "fed_reg"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0.0"
flaat = "^1.1.15"
fastapi = "^0.108"
fedreg = {git = "https://github.com/infn-datacloud/federation-registry-lib.git", branch = "k8s"}

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.22.0"
httpx = "^0.24.1"
pytest = "^7.4.4"
pytest-cases = "^3.8.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# Ignore flake8-bugbear errors raised by Depends, Query and Security
extend-immutable-calls = [
    "fastapi.Depends", 
    "fastapi.params.Depends", 
    "fastapi.Query", 
    "fastapi.params.Query", 
    "fastapi.Security", 
    "fastapi.params.Security",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--resetdb"

[tool.coverage.run]
relative_files = true
source = ["fed_reg"]
branch = true
omit = ["tests/**"]